<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:background="?attr/colorSecondaryVariant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_cal_value_at_ActivityMain"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ring_2xlarge_red_to_blue"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/zeroCal"
        android:textAlignment="gravity"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_of_buttons_at_ActivityMain"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/colorSecondary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_dairy_at_ActivityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnDairyButtonClick"
            android:stateListAnimator="@null"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/pastRecords" />

        <Button
            android:id="@+id/btn_to_record_at_ActivityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnToRecordButtonClick"
            android:stateListAnimator="@null"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/plus"
            android:textSize="38sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_records_of_today_at_ActivityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onRecordsOfTodayButtonClick"
            android:stateListAnimator="@null"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/todaySRecord" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_of_pfc_values_at_ActivityMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_of_buttons_at_ActivityMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cal_value_at_ActivityMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_protein_value_at_ActivityMain"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:background="@drawable/ring_medium_red_to_blue"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/zeroG"
                android:textAlignment="gravity"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="bottom|center_horizontal"
                android:text="@string/protein"
                android:textAlignment="gravity"
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fat_value_at_ActivityMain"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:background="@drawable/ring_medium_red_to_blue"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/zeroG"
                android:textAlignment="gravity"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="bottom|center_horizontal"
                android:text="@string/fat"
                android:textAlignment="gravity"
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_carb_value_at_ActivityMain"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:background="@drawable/ring_medium_red_to_blue"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/zeroG"
                android:textAlignment="gravity"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center_horizontal|top"
                android:text="@string/carb"
                android:textAlignment="gravity"
                android:textSize="16sp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>