<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemInfoActivity">

    <TextView
        android:id="@+id/tv_cal_value_at_ActivityMyItemInfo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/ring_large_red_to_blue"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/zeroCal"
        android:textAlignment="gravity"
        android:textColor="#787575"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_of_pfc_values_at_ActivityMyItemInfo"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_delete_from_my_list_ActivityMyItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_from_my_list"
        android:backgroundTint="@color/theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:onClick="onDeleteFromMyList"/>


    <LinearLayout
        android:id="@+id/linearLayout_of_buttons_at_ActivityMyItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete_from_my_list_ActivityMyItemInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_back_value_at_ActivityEditMyList"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onBackButtonClick"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_edit_at_ActivityMyItemInfo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onEditButtonClick"
            android:text="@string/edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_of_pfc_values_at_ActivityMyItemInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_protein_value_at_ActivityMyItemInfo"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:background="@drawable/ring_medium_red_to_blue"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/zeroG"
                android:textAlignment="gravity"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="bottom|center_horizontal"
                android:text="@string/protein"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fat_value_at_ActivityMyItemInfo"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:background="@drawable/ring_medium_red_to_blue"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/zeroG"
                android:textAlignment="gravity"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="bottom|center_horizontal"
                android:text="@string/fat"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_carb_value_at_ActivityMyItemInfo"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_weight="1"
                android:background="@drawable/ring_medium_red_to_blue"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/zeroG"
                android:textAlignment="gravity"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:gravity="center_horizontal|top"
                android:text="@string/carb"
                android:textAlignment="gravity"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_cal_value_at_ActivityMyItemInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_dot_at_ActivityMyItemInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="・"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_item_name_at_ActivityMyItemInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="明太クリームパスタ"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>